--- a/TangoDJ/TangoDJ.csproj
+++ b/TangoDJ/TangoDJ.csproj
@@ -88,6 +88,7 @@
     <Compile Include="Library\ScanArgs.cs" />
     <Compile Include="UI\SongInfo.cs" />
     <Compile Include="UI\SongList.cs" />
+    <Compile Include="UI\SongInfoExtended.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
